--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "formik": "^2.2.9",
+    "i18next": "^21.6.7",
+    "i18next-browser-languagedetector": "^6.1.2",
     "react": "^17.0.2",
     "react-confirm-alert": "^2.7.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
